Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1014

Avro-C's Avrocat does not check if avro_value_to_json fails

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 1.6.2
    • c

    Description

      In avrocat.c, function process_file, the return value of avro_value_to_json is not checked, so if the JSON conversion fails, a free of the char *json will occur.

      I have attached a patch to check the return value and print an error.

      Attachments

        1. avrocat_check_return_value.patch
          0.6 kB
          Lucas Martin-King

        Activity

          People

            Unassigned Unassigned
            lmartinking Lucas Martin-King
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: