AVRO-1014. C: Check for errors producing JSON output in avrocat.

Contributed by Lucas Martin-King.


git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1239227 13f79535-47bb-0310-9956-ffa450edef68